@@ -1,3 +1,8 @@
+2010-03-08  Atsushi Enomoto  <atsushi@ximian.com>
+
+	* XmlSerializationWriter.cs : namespaces argument could be null.
+	  MS generated serializers often pass null here.
+
 2010-01-28  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* SerializationCodeGenerator.cs : generate valid code for non-
